name:                HamsterBalls
version:             0.1
synopsis:            3D FPS Network Game: Players control hamsters flying around in hamster balls and shooting lasers
description:         3D FPS Network Game: Players control hamsters flying around in hamster balls and shooting lasers
category:            Game
license:             BSD3
license-file:        LICENSE
author:              David Constanzo, Harley Trung, Alex Thompson, Matt Sills
maintainer:          harley.trung@yale.edu
build-type:          Simple
build-depends:       base, haskell98
Data-Files:
    tga/*.tga

executable:			 hamsterServer
main-is:			 Server.hs
ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-matches -fno-warn-type-defaults
hs-source-dirs:      src
build-depends:       OpenGL <=2.4.0.1, Yampa, GLFW >= 0.4.1, HTTP, network, time

executable:			 hamster
main-is:			 Client.hs
ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-matches -fno-warn-type-defaults
hs-source-dirs:      src
build-depends:       OpenGL <=2.4.0.1, Yampa, GLFW >= 0.4.1, HTTP, network, array >= 0.2.0.0, random >= 1.0.0.2, time

